fluxcd/apps/main/openobserve/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openobserve
spec:
  clusterIP: None
  selector:
    app: openobserve
  ports:
    - name: http
      port: 5080
      targetPort: 5080
